--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,6 +34,7 @@
                 <TextBlock Text="Password" Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="40,0,0,0"/>
                 <TextBox Text="{Binding DatabasePassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="3" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" BorderBrush="DarkGray" Margin="5,5,0,5"/>
                 <Button Grid.Column="3" Grid.Row="2" Command="{Binding TestDBCommand}" Content="Connect" VerticalAlignment="Center" Width="90" Height="28" Margin="0,15,10,5" HorizontalAlignment="Right"/>
+                <Button Grid.Column="1" Grid.Row="2" Command="{Binding TestDBCommand}" Content="Disconnect" VerticalAlignment="Center" Width="90" Height="28" Margin="0,15,10,5" HorizontalAlignment="Right"/>
             </Grid>
         </GroupBox>
         <GroupBox Grid.Row="1" Margin="10,5,10,5" Visibility="{Binding ToolsVisible, UpdateSourceTrigger=PropertyChanged}">
